[tool.poetry]
name = "stoq-server"
version = "2.0.0"
description = "Stoq API backend and syncrhonization daemon and other workers"
authors = ["Stoq Team <dev@stoq.com.br>"]

[tool.poetry.dependencies]
python = ">=3.5,<4"
blinker = "^1.4"
Flask = ">=0.10.1,<1"
Flask-RESTful = "^0.3.8"
gevent = ">=1.1.0"
psycogreen = "^1.0.2"
raven = "^6.10.0"
requests = ">=2.2"
stoqlib = {git = "https://github.com/stoq/stoq.git"}
tzlocal = ">=1.2.2"

[tool.poetry.dev-dependencies]
Babel = "^2.8.0"
coverage = "^5.3"
nose = "^1.3.7"
nosexcover = "^1.0.11"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-stoq = "^0.7.0"
pycodestyle = "^2.6.0"
pyflakes = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
