[tool.poetry]
name = "stoq-server"
version = "2.0.0"
description = "Stoq API backend and syncrhonization daemon and other workers"
authors = ["Stoq Team <dev@stoq.com.br>"]

[tool.poetry.dependencies]
python = ">=3.5,<4"
blinker = "1.3"
Flask = "0.10.1"
Flask-RESTful = "0.3.4"
psycogreen = "1.0.1"
raven = "6.1.0"
requests = "2.9.1"
stoqlib = {git = "https://github.com/stoq/stoq.git", rev = "poetry"}
stoqdrivers = "2.0.0"
tzlocal = "1.2.2"
psutil = "3.4.2"
Pygments = "2.1"
gevent = "^20.9.0"
# we need to pin werkzeug its latest version doesn't work for flask < 1
# although flask (0.10.1 used in production) allows it
Werkzeug = "0.10.4"

[tool.poetry.dev-dependencies]
Babel = "^2.8.0"
coverage = "^5.3"
nose = "^1.3.7"
nosexcover = "^1.0.11"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-stoq = "^0.7.0"
pycodestyle = "^2.6.0"
pyflakes = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
